# LogicToolbox

./: .gitignore  .json  .travis.yml  CMakeCache.txt  CMakeLists.txt  CmakeLists.txt  Doxyfile  Makefile  Prvo pokretanje  README.md  UPUTA_GUI.txt  UniverseConfig.json  cmake_install.cmake  compile_commands.json  graph.dot  zadnja.json
.codelite/: LogicToolbox.tags
build-gui-Desktop-Default/: CMakeCache.txt  GUI_LogicToolbox  GUI_LogicToolbox.cbp  Makefile  cmake_install.cmake  ui_mainwindow.h
build-gui-Desktop-Default/GUI_LogicToolbox_autogen/EWIEGA46WW/: moc_graphwidget.cpp  moc_mainwindow.cpp
gui/: BarWidget.cpp  BarWidget.h  CMakeLists.txt  GUI_LogicToolbox.pro  Makefile  cmake_install.cmake  cvor.cpp  cvor.h  edge.cpp  edge.h  globalna.cpp  grana.cpp  grana.h  graphwidget.cpp  graphwidget.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  node.cpp  node.h
include/: CoreEvaluator.h  Graph.h  Operators.h  ResultTree.h  Universe.h
installed/lib/CMake/LogicToolbox/: LogicToolboxConfig.cmake  LogicToolboxTargets-debug.cmake  LogicToolboxTargets.cmake
src/: CMakeLists.txt  Makefile  Operators.cpp  Operators.h  Universe.cpp  Universe.h  UniverseConfig.json  Variable.cpp  Variable.h  World.cpp  World.h  cmake_install.cmake
src/Core/: Operators.cpp
src/Evaluator/: CoreEvaluator.cpp  CoreEvaluator.h  ResultTree.cpp  ResultTree.h
src/Graph/: Graph.cpp  Graph.h
src/ModuleOne/: CMakeLists.txt  UniverseConfig.json  hello.cpp
src/Parser/: Expression.cpp  ExpressionTree.cpp  ExpressionTree.h  Token.cpp
src/Universe/: Universe.cpp  Universe.h  Variable.cpp  Variable.h  World.cpp  World.h
test/: .json  CMakeLists.txt  Makefile  Puno.json  alma.json  cmake_install.cmake  graph.dot  main.cpp  nez.json  proba.json  test.json  test_hello.cpp  zadnja.json
test/LogicToolbox_autogen/: mocs_compilation.cpp
test/LogicToolbox_autogen/FNKB36652H/: moc_graphwidget.cpp  moc_mainwindow.cpp
test/LogicToolbox_autogen/include/: ui_mainwindow.h
testCoverage/: Makefile  cmake_install.cmake
